<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Event Reminder </string>
    <string name="no_reminders">Add new Event</string>
    <string name="no_locations">Add new Location</string>
    <string name="Add_Event">Add Event </string>
    <string name="title">Title </string>
    <string name="Priority">Priority </string>
    <string name="notes">Notes </string>
    <string name="date">Date</string>   
    <string name="time">Time </string>
    <string name="alarms">Alarms </string>
    <string name="Picture">Pictures </string>
    <string name="Location">Location </string>
    <string name="Voice_Memo">Voice Memo </string>
    <string name="Save">Save </string>
    <string name="Cancel">Cancel </string>
    <string name="Delete">Delete </string>
    <string name="Snooze">Snooze </string>
    <string name="add_window_title">Add Event </string>
    <string name="menu_AddEvent">Add Event </string>
    <string name="help">Help</string>
    <string name="menu_AddLocation">Add Location</string>
    <string name="list_of_events">List of Events</string>
    <string name="list_event_delete">Delete Event</string>
    <string name="list_location_delete">Delete Location</string>
    <string name="event_saved_message">Event saved</string>
    <string name="event_canceled_message">Canceled</string>
    <string name="event_deleted_message">Event Deleted</string>
    <string name=" notifiy_new_task_title">Event Reminder</string>
    <string name="notify_new_task_message">New reminder</string>
    <string name="SetTimeUpdate">Set Time Update</string>
    <string name="SetLocationUpdate">Set Location Update</string>
    <string name="addNewLocation">Pick Location On Map</string>
    <string name="useSavedLocation">Pick Location</string>
    <string name="useCurrentLocation">Use Current Location</string>
    <!-- Preferences -->
	<string name="pref_category_location_defaults_key">Location_default_category</string>
	<string name="pref_category_location_defaults_title">Location Title Default</string>
	<string name="pref_location_title_key">default_location_title</string>
	<string name="pref_location_title_dialog_title">Default Location Title</string>
	<string name="pref_location_title_message">The default title for a location.</string>
	<string name="pref_location_title_summary">Default title for locations.</string>
	<string name="pref_location_title_title">Default Location Title</string>
	<string name="no_pick_message">Please Pick Location</string>
	<string name="no_title_message">Please Enter a Title</string>
</resources>
