<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id ="@+id/AddReminderLayout"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical">
  	<TextView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/title"
  		android:textStyle="bold"
  		android:layout_weight="0.08"
  	/>
  	<EditText
  		android:id="@+id/title"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_weight="0.09"
  		/>
  	<TextView 
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"
  		android:text="@string/notes"
  		android:textStyle="bold"
  		android:layout_weight="0.08"
  		/>
  	<EditText
  		android:id="@+id/notes"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:minLines="3"
  		android:scrollbars="vertical"
  		android:gravity="top"
  		android:layout_weight="0.09"
  		/>
  	<LinearLayout
  		android:id = "@+id/EventOptionsLayout" 
    	android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"
   		android:layout_weight="0.17"
    	>
		<Button
			android:id="@+id/timeUpdateButton"
			android:text="@string/SetTimeUpdate"
			android:textStyle="bold"
			android:layout_weight="0.5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
  		/>
		<Button
			android:id="@+id/locationUpdateButton"
			android:text="@string/SetLocationUpdate"
			android:textStyle="bold"
			android:layout_weight="0.5"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
  		/>
  	</LinearLayout>
  	<LinearLayout 
  		android:id="@+id/timeUpdateLayout"
  		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">	
  	<LinearLayout 
    	android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"
   		android:layout_weight="0.17"
   		android:layout_marginLeft="10px">
  		<TextView 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_weight="0.33"
  			android:textStyle="bold"
  			android:text="@string/date"
  			android:layout_marginRight="10px"
  			android:layout_marginLeft="10px"/>
  		<TextView 
	  		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_weight="0.33"
  			android:textStyle="bold"
  			android:text="@string/time"
  			android:layout_marginRight="10px"/>
  		<TextView 
	  		android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_weight="0.33"
  			android:textStyle="bold"
  			android:text="@string/alarms"/>
    </LinearLayout>
  	<LinearLayout 
    	android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"
   		android:layout_weight="0.17"
   		>
  	    <Button
  			android:id="@+id/dateForReminder"
  			android:layout_weight="0.33"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginRight="10px"
  			/>
  		<Button
  			android:id="@+id/timeForReminder"
  			android:layout_weight="0.33"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:layout_marginRight="10px"/>
  		<Button
  			android:id="@+id/alarmForReminder"
  			android:layout_width="wrap_content"
  			android:layout_weight="0.33"
  			android:layout_height="wrap_content"
  			android:layout_marginRight="10px"/>
  	</LinearLayout>
	</LinearLayout>
	<LinearLayout 
  		android:id="@+id/locationUpdateLayout"
  		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">			
			<Button
  				android:id="@+id/useSavedLocation"
  				android:text="@string/useSavedLocation"
  				android:layout_weight="0.1667"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:layout_marginRight="5px"
  			/>
	</LinearLayout>
  <LinearLayout
  		android:id = "@+id/defaultLayout2" 
    	android:layout_width="fill_parent" 
   		android:layout_height="wrap_content"
   		android:layout_weight="0.17"
   		android:layout_marginBottom="0dip"
   		android:gravity="bottom"
    	>
  	<Button
  		android:id="@+id/save"
  		android:text="@string/Save"
  		android:textStyle="bold"
  		android:layout_weight="0.5"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"/>
 	<Button
  		android:id="@+id/cancel"
  		android:text="@string/Cancel"
  		android:textStyle="bold"
  		android:layout_weight="0.5"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content"/>
  	</LinearLayout>
</LinearLayout>
